<resources>
    <string name="app_name">DriodQuest</string>
    <string name="true_button">Yes</string>
    <string name="false_button">No</string>
    <string name="action_settings">Settings</string>
    <string name="correct_toast">не верно</string>
    <string name="incorrect_toast">верно</string>
    <string name="menu_settings">Settings</string>
    <string name="next_button">Далее</string>
    <string name="back_button">Назад</string>
    <string name="question_android">OC Android основана на ядре Linux</string>
    <string name="question_liner">Размететка LinearLayout позиционирует свои дочерние элементы в
    строки и столбцы</string>
    <string name="question_service">Компоненты Android-приложения Service предоставляют доступ к
    данным.</string>
    <string name="question_res">Ресурсы приложения содержатся в отдельном файле XML.</string>
    <string name="question_manifest">AndroidManifest.xml предоставляет системе основную
    информацию о программе.</string>
    <string name="question_ger">Ресурсы  Android многофункциальные?</string>
    <string name="question_ber">Android study язык JAVA?</string>
    <string name="question_der">Можно на Android сделать приложеление по погоде?</string>
    <string name="question_red">Доступно в Android-приложение макет?</string>
    <string name="question_ker">RGB основные цвета</string>
    <string name="warning_text">Вы уверены, что хотите это сделать?</string>
    <string name="show_answer_button">Показать ответ</string>
    <string name="deceit_button">Обмануть !</string>
    <string name="judgment_toast">Обманывать нельзя.</string>
</resources>